--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
   <!-- Section Contact -->
   <section id="contact" class="section">
     <h2>Contact</h2>
-    <p>📧 <a href="mailto:contact@tiohacademy.org">contact@tiohacademy.org</a></p>
+    <p>📧 <a href="tiohacademy@gmail.com">tiohacademy@gmail.com</a></p>
     <p>Retrouvez-nous sur :</p>
     <div class="socials">
-      <a href="#">YouTube</a> |
-      <a href="#">LinkedIn</a> |
-      <a href="#">GitHub</a>
+   <a href="https://www.youtube.com/@tiohacademy" target="_blank" rel="noopener noreferrer">YouTube</a> |
+    <a href="https://www.linkedin.com/in/clotilde-djuikem-8186901a0/" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
+    <a href="https://djuikem-academy.github.io" target="_blank" rel="noopener noreferrer">Website</a>
     </div>
   </section>
 
