--- a/index.html
+++ b/index.html
@@ -78,6 +78,64 @@
     </div>
   </section>
 
+  <!-- Section Impact & Engagement -->
+<section id="impact" class="section">
+  <h2>Notre impact et nos engagements</h2>
+
+  <!-- A. Sur le terrain -->
+  <h3>🟣 Actions sur le terrain</h3>
+  <p>
+    Depuis 2023, Djuikem Academy mène des activités d’inspiration et d’enseignement en mathématiques
+    auprès de plus de <strong>500 élèves</strong> au Cameroun, en France et au Canada.
+    Ces rencontres visent à éveiller la curiosité scientifique, surtout chez les jeunes filles,
+    et à montrer que la science est accessible à tous.
+  </p>
+
+  <div class="gallery">
+    <figure>
+      <img src="images/babete.jpg" alt="Babété, Cameroun">
+      <figcaption>Babété (Cameroun)</figcaption>
+    </figure>
+    <figure>
+      <img src="images/winnipeg.jpg" alt="Winnipeg, Canada">
+      <figcaption>Winnipeg (Canada)</figcaption>
+    </figure>
+    <figure>
+      <img src="images/nice.jpg" alt="Nice, France">
+      <figcaption>Nice (France)</figcaption>
+    </figure>
+  </div>
+
+  <!-- B. Impact numérique -->
+  <h3>💻 Impact numérique</h3>
+  <p>
+    En parallèle, nous touchons une communauté grandissante en ligne :
+    <strong>100 000+ abonnés</strong> sur YouTube et LinkedIn, avec des spectateurs de plus de <strong>100 pays</strong>.
+    À travers nos vidéos, ressources et livres numériques, nous rendons les mathématiques plus humaines et accessibles.
+  </p>
+
+  <div class="social-impact">
+    <a href="https://www.youtube.com/@tiohacademy" target="_blank" rel="noopener noreferrer" class="btn">
+      📺 Chaîne YouTube Tioh Academy
+    </a>
+    <a href="https://www.linkedin.com/in/clotilde-djuikem-8186901a0/" target="_blank" rel="noopener noreferrer" class="btn">
+      💼 Profil LinkedIn
+    </a>
+  </div>
+
+  <!-- C. Bénévolat -->
+  <h3>🤝 Devenir bénévole</h3>
+  <p>
+    Vous souhaitez contribuer à rendre les mathématiques accessibles et inspirantes ?
+    Rejoignez notre équipe de bénévoles (communication, traduction, ateliers, graphisme…).
+  </p>
+
+  <a href="https://forms.gle/TON_LIEN_GOOGLE_FORM" target="_blank" rel="noopener noreferrer" class="btn">
+    🌍 Devenir bénévole
+  </a>
+</section>
+
+
   <!-- Section Contact -->
   <section id="contact" class="section">
     <h2>Contact</h2>
