--- a/index.html
+++ b/index.html
@@ -77,7 +77,20 @@
       <a href="#" class="btn">S’inscrire bientôt</a>
     </div>
   </section>
+  
+<!-- Section Impact -->
+<section id="impact-preview" class="section">
+  <h2>🌍 Notre impact</h2>
 
+  <div class="impact-bubbles">
+    <div class="bubble">500+ élèves inspirés</div>
+    <div class="bubble">3 pays : Cameroun, France, Canada</div>
+    <div class="bubble">100 000+ abonnés en ligne</div>
+    <div class="bubble">Des vidéos, livres & ateliers STEM</div>
+  </div>
+
+  <a href="impact.html" class="btn">✨ Découvrir nos actions</a>
+</section>
 
 
 
