--- a/index.html
+++ b/index.html
@@ -99,6 +99,22 @@ document.addEventListener("DOMContentLoaded", () => {
     <div class="bubble">Des vidéos, livres & ateliers STEM</div>
   </div>
 
+    <!-- Mini galerie -->
+  <div class="gallery-mini">
+    <figure>
+      <img src="images/babete.jpg" alt="Atelier à Babété">
+      <figcaption>Babété 🇨🇲</figcaption>
+    </figure>
+    <figure>
+      <img src="images/winnipeg.jpg" alt="Atelier à Winnipeg">
+      <figcaption>Winnipeg 🇨🇦</figcaption>
+    </figure>
+    <figure>
+      <img src="images/nice.jpg" alt="Atelier à Nice">
+      <figcaption>Nice 🇫🇷</figcaption>
+    </figure>
+  </div>
+
   <a href="impact.html" class="btn">✨ Découvrir nos actions</a>
 </section>
 
