--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@ document.addEventListener("DOMContentLoaded", () => {
     <!-- Mini galerie -->
   <div class="gallery-mini">
     <figure>
-      <img src="images/babete.jpg" alt="Atelier à Babété">
+      <img src="images/babete2021.jpg" alt="Atelier à Babété">
       <figcaption>Babété 🇨🇲</figcaption>
     </figure>
     <figure>
-      <img src="images/winnipeg.jpg" alt="Atelier à Winnipeg">
+      <img src="images/winnipeg2024.jpg" alt="Atelier à Winnipeg">
       <figcaption>Winnipeg 🇨🇦</figcaption>
     </figure>
     <figure>
-      <img src="images/nice.jpg" alt="Atelier à Nice">
+      <img src="images/nice2022.jpg" alt="Atelier à Nice">
       <figcaption>Nice 🇫🇷</figcaption>
     </figure>
   </div>
