--- a/index.html
+++ b/index.html
@@ -87,36 +87,40 @@ document.addEventListener("DOMContentLoaded", () => {
       <a href="#" class="btn">S’inscrire bientôt</a>
     </div>
   </section>
-  
-<!-- Section Impact -->
+
+  <!-- Section Impact (bulles + mini-galerie côte à côte) -->
 <section id="impact-preview" class="section">
   <h2>🌍 Notre impact</h2>
 
-  <div class="impact-bubbles">
-    <div class="bubble">500+ élèves inspirés</div>
-    <div class="bubble">3 pays : Cameroun, France, Canada</div>
-    <div class="bubble">120 000+ abonnés en ligne</div>
-    <div class="bubble">Des vidéos, livres & ateliers STEM</div>
-  </div>
+  <div class="impact-layout">
+    <!-- Colonne gauche : bulles -->
+    <div class="impact-bubbles">
+      <div class="bubble">500+ élèves inspirés</div>
+      <div class="bubble">3 pays : Cameroun, France, Canada</div>
+      <div class="bubble">120 000+ abonnés en ligne</div>
+      <div class="bubble">Des vidéos, livres & ateliers STEM</div>
+    </div>
 
-    <!-- Mini galerie -->
-  <div class="gallery-mini">
-    <figure>
-      <img src="images/babete2021.jpg" alt="Atelier à Babété">
-      <figcaption>Babété 🇨🇲</figcaption>
-    </figure>
-    <figure>
-      <img src="images/winnipeg2024.jpg" alt="Atelier à Winnipeg">
-      <figcaption>Winnipeg 🇨🇦</figcaption>
-    </figure>
-    <figure>
-      <img src="images/nice2022.jpg" alt="Atelier à Nice">
-      <figcaption>Nice 🇫🇷</figcaption>
-    </figure>
+    <!-- Colonne droite : mini-galerie -->
+    <div class="gallery-mini">
+      <figure>
+        <img src="images/babete2021.png" alt="Atelier à Babété">
+        <figcaption>Babété 🇨🇲</figcaption>
+      </figure>
+      <figure>
+        <img src="images/winnipeg2024.png" alt="Atelier à Winnipeg">
+        <figcaption>Winnipeg 🇨🇦</figcaption>
+      </figure>
+      <figure>
+        <img src="images/nice2022.png" alt="Atelier à Nice">
+        <figcaption>Nice 🇫🇷</figcaption>
+      </figure>
+    </div>
   </div>
 
   <a href="impact.html" class="btn">✨ Découvrir nos actions</a>
 </section>
+
 
 
 
