--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@ document.addEventListener("DOMContentLoaded", () => {
     </div>
   </section>
 
-  <!-- Section Impact (bulles + mini-galerie côte à côte) -->
-<section id="impact-preview" class="section">
+  <section id="impact-preview" class="section">
   <h2>🌍 Notre impact</h2>
 
   <div class="impact-layout">
@@ -101,7 +100,7 @@ document.addEventListener("DOMContentLoaded", () => {
       <div class="bubble">Des vidéos, livres & ateliers STEM</div>
     </div>
 
-    <!-- Colonne droite : mini-galerie -->
+    <!-- Colonne droite : mini-galerie horizontale -->
     <div class="gallery-mini">
       <figure>
         <img src="images/babete2021.png" alt="Atelier à Babété">
@@ -120,6 +119,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
   <a href="impact.html" class="btn">✨ Découvrir nos actions</a>
 </section>
+
 
 
 
