--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ document.addEventListener("DOMContentLoaded", () => {
           <li><a href="#accueil">Accueil</a></li>
           <li><a href="#missions">Missions</a></li>
           <li><a href="#activites">Activités</a></li>
+          <li><a href="#impacts">Notre impact</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -88,6 +89,7 @@ document.addEventListener("DOMContentLoaded", () => {
     </div>
   </section>
 
+    <!-- Section Impact -->
   <section id="impact-preview" class="section">
   <h2>🌍 Notre impact</h2>
 
