--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@ document.addEventListener("DOMContentLoaded", () => {
     </div>
   </section>
 
-    <!-- Section Impact -->
-  <section id="impact-preview" class="section">
+<!-- Section Impact -->
+<section id="impact-preview" class="section">
   <h2>🌍 Notre impact</h2>
 
-  <div class="impact-layout">
-    <!-- Colonne gauche : bulles -->
+  <div class="impact-horizontal">
+    <!-- Sous-section 1 : bulles -->
     <div class="impact-bubbles">
       <div class="bubble">500+ élèves inspirés</div>
       <div class="bubble">3 pays : Cameroun, France, Canada</div>
@@ -102,7 +102,7 @@ document.addEventListener("DOMContentLoaded", () => {
       <div class="bubble">Des vidéos, livres & ateliers STEM</div>
     </div>
 
-    <!-- Colonne droite : mini-galerie horizontale -->
+    <!-- Sous-section 2 : images -->
     <div class="gallery-mini">
       <figure>
         <img src="images/babete2021.png" alt="Atelier à Babété">
@@ -121,6 +121,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
   <a href="impact.html" class="btn">✨ Découvrir nos actions</a>
 </section>
+
 
 
 
