--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@ document.addEventListener("DOMContentLoaded", () => {
     </div>
   </div>
 
-  <a href="impact.html" class="btn">✨ Découvrir nos actions</a>
+
+    <a href="impact.html" class="btn"> Découvrir nos actions</a>
 </section>
 
 
