--- a/activites.html
+++ b/activites.html
@@ -107,7 +107,7 @@
           <li><a href="index.html#missions">Missions</a></li>
           <li><a href="activites.html" class="active">Activités</a></li>
           <li><a href="impact.html">Impact</a></li>
-          <li><a href="index.html#contact">Contact</a></li>
+          <li><a href="index.html">Contact</a></li>
         </ul>
       </nav>
     </div>
