--- a/impact.html
+++ b/impact.html
@@ -246,15 +246,15 @@
 
     <div class="gallery">
       <figure>
-        <img src="images/babete.jpg" alt="Atelier à Babété, Cameroun">
+        <img src="images/babete2021.png" alt="Atelier à Babété, Cameroun">
         <figcaption>Babété 🇨🇲</figcaption>
       </figure>
       <figure>
-        <img src="images/winnipeg.jpg" alt="Atelier à Winnipeg, Canada">
+        <img src="images/winnipeg2024.png" alt="Atelier à Winnipeg, Canada">
         <figcaption>Winnipeg 🇨🇦</figcaption>
       </figure>
       <figure>
-        <img src="images/nice.jpg" alt="Atelier à Nice, France">
+        <img src="images/nice2022.png" alt="Atelier à Nice, France">
         <figcaption>Nice 🇫🇷</figcaption>
       </figure>
     </div>
