--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@ document.addEventListener("DOMContentLoaded", () => {
   </section>
 
 <!-- Section Impact -->
-<section id="impact-preview" class="section">
+<!--<section id="impact-preview" class="section">
   <h2>🌍 Notre impact</h2>
 
   <div class="impact-horizontal">
     <!-- Sous-section 1 : bulles -->
-    <div class="impact-bubbles">
+   <!-- <div class="impact-bubbles">
       <div class="bubble">500+ élèves inspirés</div>
       <div class="bubble">3 pays : Cameroun, France, Canada</div>
       <div class="bubble">120 000+ abonnés en ligne</div>
@@ -103,7 +103,7 @@ document.addEventListener("DOMContentLoaded", () => {
     </div>
 
     <!-- Sous-section 2 : images -->
-    <div class="gallery-mini">
+  <!--  <div class="gallery-mini">
       <figure>
         <img src="images/babete2021.png" alt="Atelier à Babété">
         <figcaption>Babété 🇨🇲</figcaption>
@@ -121,7 +121,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 
     <a href="impact.html" class="btn"> Découvrir nos actions</a>
-</section>
+</section> -->
 
 
 
