--- a/activites.html
+++ b/activites.html
@@ -123,7 +123,7 @@
 
   <!-- Section Webinaire -->
   <section id="webinaire" class="section">
-    <h2>🎥 Webinaire : Les pionnières des sciences</h2>
+    <h2> Webinaire : Les pionnières des sciences</h2>
     <p>
       Ce webinaire est conçu pour les enfants de 8 à 14 ans, mais aussi pour leurs parents curieux.  
       Ensemble, ils découvrent comment des femmes extraordinaires ont marqué l’histoire de la science
@@ -131,7 +131,7 @@
     </p>
 
     <div class="webinaire">
-      <h3>Quand la curiosité mène jusqu’aux étoiles ✨</h3>
+      <h3>Quand la curiosité mène jusqu’aux STEM</h3>
       <p>
         <strong>Clotilde Djuikem</strong> vous embarque dans un voyage inspirant à travers le temps et les étoiles.  
         Avec des histoires vraies, des jeux interactifs et des mini-défis mathématiques, les enfants découvrent
@@ -139,7 +139,7 @@
       </p>
 
       <ul style="line-height:1.8;">
-        <li>🧠 Pour les enfants : ateliers interactifs et quiz ludiques</li>
+        <li>🧠 Pour les enfants : ateliers inspirantes, interactifs et quiz ludiques</li>
         <li>👨‍👩‍👧 Pour les parents : conseils pour nourrir la curiosité scientifique</li>
         <li>🌍 En ligne, gratuit sur inscription</li>
       </ul>
