--- a/activites.html
+++ b/activites.html
@@ -121,34 +121,51 @@
     </div>
   </section>
 
-  <!-- Section Webinaire -->
-  <section id="webinaire" class="section">
-    <h2> Webinaire : Les pionnières des sciences</h2>
+ <!-- Section Webinaire -->
+<section id="webinaire" class="section">
+  <h2>Webinaire : Les pionnières des sciences</h2>
+  <p>
+    Ce webinaire est conçu pour les enfants de 8 à 14 ans, mais aussi pour leurs parents curieux.  
+    Ensemble, ils découvrent comment des femmes extraordinaires ont marqué l’histoire de la science
+    et comment la curiosité peut transformer une vie.
+  </p>
+
+  <div class="webinaire">
+    <h3>Quand la curiosité mène jusqu’aux STEM</h3>
     <p>
-      Ce webinaire est conçu pour les enfants de 8 à 14 ans, mais aussi pour leurs parents curieux.  
-      Ensemble, ils découvrent comment des femmes extraordinaires ont marqué l’histoire de la science
-      et comment la curiosité peut transformer une vie.
+      <strong>Clotilde Djuikem</strong> vous embarque dans un voyage inspirant à travers le temps et les étoiles.  
+      Avec des histoires vraies, des jeux interactifs et des mini-défis mathématiques, les enfants découvrent
+      la beauté de la science sous un nouveau jour.
     </p>
 
-    <div class="webinaire">
-      <h3>Quand la curiosité mène jusqu’aux STEM</h3>
+    <ul style="line-height:1.8;">
+      <li>🧠 Pour les enfants : ateliers inspirants, interactifs et quiz ludiques</li>
+      <li>👨‍👩‍👧 Pour les parents : conseils pour nourrir la curiosité scientifique</li>
+      <li>🌍 En ligne, gratuit sur inscription</li>
+    </ul>
+
+    <!-- Partie personnelle : ton témoignage -->
+    <div class="temoignage">
+      <h3>Mon parcours et ma mission 💜</h3>
       <p>
-        <strong>Clotilde Djuikem</strong> vous embarque dans un voyage inspirant à travers le temps et les étoiles.  
-        Avec des histoires vraies, des jeux interactifs et des mini-défis mathématiques, les enfants découvrent
-        la beauté de la science sous un nouveau jour.
+        En tant que mathématicienne et chercheuse, j’ai longtemps rêvé de comprendre le monde à travers les nombres
+        et les modèles. Aujourd’hui, je partage cette passion avec les jeunes pour leur montrer que 
+        <strong>la science appartient à tout le monde</strong>, et que les filles ont toute leur place dans les laboratoires,
+        les observatoires et les salles de classe.  
       </p>
-
-      <ul style="line-height:1.8;">
-        <li>🧠 Pour les enfants : ateliers inspirantes, interactifs et quiz ludiques</li>
-        <li>👨‍👩‍👧 Pour les parents : conseils pour nourrir la curiosité scientifique</li>
-        <li>🌍 En ligne, gratuit sur inscription</li>
-      </ul>
-
-      <a href="https://forms.gle/TON_LIEN_GOOGLE_FORM" class="btn-inscription" target="_blank" rel="noopener noreferrer">
-        💫 Je veux inscrire mon enfant
-      </a>
+      <p>
+        À travers des anecdotes personnelles et des moments de découverte, je montre comment la persévérance,
+        la curiosité et l’imagination peuvent transformer un rêve en vocation.  
+        Mon objectif : inspirer la prochaine génération de scientifiques africaines, curieuses et audacieuses !
+      </p>
     </div>
-  </section>
+
+    <a href="https://forms.gle/TON_LIEN_GOOGLE_FORM" class="btn-inscription" target="_blank" rel="noopener noreferrer">
+      💫 Je veux inscrire mon enfant
+    </a>
+  </div>
+</section>
+
 
   <!-- Section à venir -->
   <section class="section light">
