--- a/activites.html
+++ b/activites.html
@@ -160,7 +160,7 @@
       </p>
     </div>
 
-    <a href="https://forms.gle/TON_LIEN_GOOGLE_FORM" class="btn-inscription" target="_blank" rel="noopener noreferrer">
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdXNtFnPAZ7CL9iQlbw2U0p4MJKfTzaOCSV3G_324K0WNvIiQ/viewform?usp=header" class="btn-inscription" target="_blank" rel="noopener noreferrer">
       💫 Je veux inscrire mon enfant
     </a>
   </div>
