--- a/impact.html
+++ b/impact.html
@@ -283,7 +283,7 @@
       Rejoignez une équipe dynamique de bénévoles qui partagent la même vision :  
       <em>inspirer pour transformer</em>.
     </p>
-    <a href="https://forms.gle/TON_LIEN_GOOGLE_FORM" target="_blank" class="btn-benevole">🌟 Rejoindre l’équipe</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLScHEfrVy63MIPnuegxBap_CvBqfvAl8YbwDRBYT7wMsf_8eQA/viewform?usp=header" target="_blank" class="btn-benevole">🌟 Rejoindre l’équipe</a>
   </section>
 
   <!-- Footer -->
