--- a/activites.html
+++ b/activites.html
@@ -123,17 +123,17 @@
 
  <!-- Section Webinaire -->
 <section id="webinaire" class="section">
-  <h2>Webinaire : Les pionnières des sciences</h2>
+  <h2>Djuikem Academy Webinaire : Les pionnières des sciences</h2>
   <p>
-    Ce webinaire est conçu pour les enfants de 8 à 14 ans, mais aussi pour leurs parents curieux.  
+    Ce webinaire est conçu pour les enfants, mais aussi pour leurs parents curieux.  
     Ensemble, ils découvrent comment des femmes extraordinaires ont marqué l’histoire de la science
     et comment la curiosité peut transformer une vie.
   </p>
 
   <div class="webinaire">
-    <h3>Quand la curiosité mène jusqu’aux STEM</h3>
+    <h3> DAW1: Quand la curiosité mène jusqu’aux STEM</h3>
     <p>
-      <strong>Clotilde Djuikem</strong> vous embarque dans un voyage inspirant à travers le temps et les étoiles.  
+      Pour ce premier DAW, <strong> Clotilde Djuikem</strong> fondatrice de Djuikem Academy vous embarque dans un voyage inspirant à travers le temps et les étoiles.  
       Avec des histoires vraies, des jeux interactifs et des mini-défis mathématiques, les enfants découvrent
       la beauté de la science sous un nouveau jour.
     </p>
