--- a/activites.html
+++ b/activites.html
@@ -144,7 +144,12 @@
       <li>🌍 En ligne, gratuit sur inscription</li>
     </ul>
 
+ 
     <!-- Partie personnelle : ton témoignage -->
+       <div class="photo-intervenant">
+  <img src="images/clotilde-djuikem.png" alt="Clotilde Djuikem - Intervenante du webinaire">
+</div>
+
     <div class="temoignage">
       <h3>Mon parcours et ma mission 💜</h3>
       <p>
