--- a/activites.html
+++ b/activites.html
@@ -147,7 +147,7 @@
  
     <!-- Partie personnelle : ton témoignage -->
        <div class="photo-intervenant">
-  <img src="images/clotilde_djuikem.png" alt="Clotilde Djuikem - Intervenante du webinaire">
+  <img src="images/intervenantes/clotilde_djuikem.jpeg" alt="Clotilde Djuikem - Intervenante du webinaire">
 </div>
 
     <div class="temoignage">
