--- a/activites.html
+++ b/activites.html
@@ -161,7 +161,7 @@
       <p>
         À travers des anecdotes personnelles et des moments de découverte, je montre comment la persévérance,
         la curiosité et l’imagination peuvent transformer un rêve en vocation.  
-        Mon objectif : inspirer la prochaine génération de scientifiques africaines, curieuses et audacieuses !
+        Mon objectif : inspirer la prochaine génération de scientifiques, curieuses et audacieuses !
       </p>
     </div>
 
