--- a/activites.html
+++ b/activites.html
@@ -124,6 +124,10 @@
  <!-- Section Webinaire -->
 <section id="webinaire" class="section">
   <h2>Djuikem Academy Webinaire : Les pionnières des sciences</h2>
+  <!-- Bulle de date -->
+<div class="date-bulle">
+  📅 <strong>31 octobre 2025 — 16h GMT</strong>
+</div>
   <p>
     Ce webinaire est conçu pour les enfants, mais aussi pour leurs parents curieux.  
     Ensemble, ils découvrent comment des femmes extraordinaires ont marqué l’histoire de la science
