--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@ document.addEventListener("DOMContentLoaded", () => {
       <h1 class="logo">Djuikem Academy</h1>
       <nav>
         <ul>
-         <li><a href="index.html#accueil">Accueil</a></li>
+         <li><a href="index.html#accueil" class="active">Accueil</a></li>
           <li><a href="index.html#missions">Missions</a></li>
-          <li><a href="activites.html" class="active">Activités</a></li>
+          <li><a href="activites.html">Activités</a></li>
           <li><a href="impact.html">Impact</a></li>
+          <li><a href="ressources.html">Ressources</a></li>
           <li><a href="index.html#contact">Contact</a></li>
         </ul>
       </nav>
