--- a/activites.html
+++ b/activites.html
@@ -107,6 +107,7 @@
           <li><a href="index.html#missions">Missions</a></li>
           <li><a href="activites.html" class="active">Activités</a></li>
           <li><a href="impact.html">Impact</a></li>
+          <li><a href="ressources.html">Ressources</a></li>
           <li><a href="index.html">Contact</a></li>
         </ul>
       </nav>
