--- a/impact.html
+++ b/impact.html
@@ -210,6 +210,7 @@
           <li><a href="index.html#missions">Missions</a></li>
           <li><a href="activites.html">Activités</a></li>
           <li><a href="impact.html" class="active">Impact</a></li>
+           <li><a href="ressources.html">Ressources</a></li>
           <li><a href="index.html#contact">Contact</a></li>
         </ul>
       </nav>
