--- a/ressources.html
+++ b/ressources.html
@@ -177,10 +177,12 @@
       <h1 class="logo">Djuikem Academy</h1>
       <nav>
         <ul>
-          <li><a href="index.html">Accueil</a></li>
+          <li><a href="index.html#accueil">Accueil</a></li>
+          <li><a href="index.html#missions">Missions</a></li>
           <li><a href="activites.html">Activités</a></li>
-          <li><a href="ressources.html" class="active">Ressources</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="impact.html">Impact</a></li>
+           <li><a href="ressources.html" class="active">Ressources</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
         </ul>
       </nav>
     </div>
