--- a/ressources.html
+++ b/ressources.html
@@ -193,71 +193,92 @@
       <h2>📚 Ressources & Vulgarisation</h2>
       <p>Tous nos documents, supports et astuces pour partager les sciences autrement.</p>
     </div>
-  </section>
 
-  <section class="section">
-    <h3>Documents d’inspiration</h3>
-    <div class="resources-grid">
-      <div class="resource-card">
-        <div class="card-content">
-          <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_8eme.pdf" target="_blank">
-            Inspiration 8ème
-          </a>
-          <p>Document d’inspiration pour le niveau 8ème — téléchargement en PDF.</p>
-        </div>
+    <section class="section resources-page">
+
+  <!-- 🔶 SECTION 1 : Documents d’inspiration -->
+  <h3 class="bubble-title bubble-jaune">Documents d’inspiration</h3>
+  <div class="resources-grid">
+    <div class="resource-card">
+      <div class="card-content">
+        <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_8eme.pdf" target="_blank">
+          Inspiration 8ème
+        </a>
+        <p>Document d’inspiration pour le niveau 8ᵉ — téléchargement en PDF.</p>
       </div>
-      <!-- Ajoute d’autres cartes pour 11ème, 12ème, etc. -->
     </div>
-
-    <h3 style="margin-top: 60px;">Livres & Publications</h3>
-    <div class="resources-grid">
-      <div class="resource-card">
-        <div class="card-content">
-          <a href="https://cdjuikem.github.io/pdfs/outreach/Livres_100_Applications.pdf" target="_blank">
-            100 applications concrètes des mathématiques
-          </a>
-          <p>La base des IA — avril 2025</p>
-        </div>
+    <div class="resource-card">
+      <div class="card-content">
+        <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_11eme.pdf" target="_blank">
+          Inspiration 11ème
+        </a>
+        <p>Document d’inspiration pour le niveau 11ᵉ — téléchargement en PDF.</p>
       </div>
-      <!-- autres livres ici -->
     </div>
-
-    <div class="vulgarisation">
-      <h3 style="margin-top: 60px;">Comment vulgariser ?</h3>
-
-      <div class="item">
-        <h4>1. Connaître son public</h4>
-        <p>
-          Pour bien vulgariser un concept scientifique, commence par te demander : à qui t’adresses-tu ? 
-          Enfants, adolescents, adultes ? Chaque groupe a ses intérêts et son vocabulaire.
-        </p>
+    <div class="resource-card">
+      <div class="card-content">
+        <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_12eme.pdf" target="_blank">
+          Inspiration 12ème
+        </a>
+        <p>Document d’inspiration pour le niveau 12ᵉ — téléchargement en PDF.</p>
       </div>
-
-      <div class="item">
-        <h4>2. Utiliser des analogies parlantes</h4>
-        <p>
-          Comparer une idée abstraite à quelque chose de concret (un ballon pour l’atmosphère, des billes pour les atomes...) rend l’information plus accessible.
-        </p>
-      </div>
-
-      <div class="item">
-        <h4>3. Illustrer avec des images simples</h4>
-        <p>
-          Une image, un graphique clair ou un schéma minimal peut valoir mille mots. Garde les illustrations simples et pertinentes.
-        </p>
-      </div>
-
-      <div class="item">
-        <h4>4. Raconter une histoire</h4>
-        <p>
-          Introduis les concepts via une anecdote ou un récit — cela capte l’attention et rend le savoir mémorable.
-        </p>
-      </div>
-
-      <!-- tu peux ajouter d'autres conseils -->
     </div>
+    <div class="resource-card">
+      <div class="card-content">
+        <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_college_LouisRiel.pdf" target="_blank">
+          Inspiration collège Louis-Riel (9–10)
+        </a>
+        <p>Projet collaboratif entre élèves et enseignants — version 2025.</p>
+      </div>
+    </div>
+  </div>
 
-  </section>
+  <!-- 🔮 SECTION 2 : Livres & Publications -->
+  <h3 class="bubble-title bubble-violet">Livres & Publications</h3>
+  <div class="resources-grid">
+    <div class="resource-card">
+      <div class="card-content">
+        <a href="https://cdjuikem.github.io/pdfs/outreach/Livres_100_Applications.pdf" target="_blank">
+          100 applications concrètes des mathématiques
+        </a>
+        <p>La base des IA — Avril 2025.</p>
+      </div>
+    </div>
+    <div class="resource-card">
+      <div class="card-content">
+        <a href="https://cdjuikem.github.io/pdfs/outreach/Livres_25_Applications.pdf" target="_blank">
+          Les maths autrement — 25 applications fascinantes
+        </a>
+        <p>Exploration créative — Février 2024.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- 💡 SECTION 3 : Comment vulgariser ? -->
+  <h3 class="bubble-title bubble-lavande">Comment vulgariser ?</h3>
+  <div class="vulgarisation">
+    <div class="item">
+      <h4>1. Connaître son public</h4>
+      <p>Adapter le vocabulaire et le ton selon l’âge et l’expérience du public pour créer une vraie connexion.</p>
+    </div>
+    <div class="item">
+      <h4>2. Utiliser des analogies parlantes</h4>
+      <p>Relier les concepts à la vie quotidienne : un ballon pour l’atmosphère, une recette pour un modèle mathématique.</p>
+    </div>
+    <div class="item">
+      <h4>3. Illustrer avec des images simples</h4>
+      <p>Les visuels renforcent la compréhension ; mieux vaut un schéma clair qu’un long paragraphe technique.</p>
+    </div>
+    <div class="item">
+      <h4>4. Raconter une histoire</h4>
+      <p>Chaque découverte a une part d’humanité ; introduis les notions avec une anecdote captivante.</p>
+    </div>
+  </div>
+
+</section>
+
+
+  
 
   <footer>
     <p>© 2025 Djuikem Academy — Inspirer • Innover • Orienter</p>
