--- a/ressources.html
+++ b/ressources.html
@@ -18,6 +18,7 @@
       color: var(--gris);
       margin: 0;
       padding: 0;
+      background-color: #fafafa;
     }
 
     header {
@@ -39,6 +40,7 @@
       gap: 20px;
       padding: 0;
       margin: 10px 0;
+      flex-wrap: wrap;
     }
 
     nav a {
@@ -57,115 +59,109 @@
         url('images/hero-ressources.jpg') center/cover no-repeat;
       color: var(--blanc);
       text-align: center;
-      padding: 50px 20px;
+      padding: 40px 20px;
     }
 
     .hero-text h2 {
       margin: 0;
-      font-size: 2.5em;
+      font-size: 2em;
     }
 
     .hero-text p {
-      margin-top: 15px;
-      font-size: 1.2em;
+      margin-top: 10px;
+      font-size: 1.1em;
     }
 
     .section {
-      padding: 40px 20px;
-      max-width: 1000px;
+      padding: 30px 20px;
+      max-width: 900px;
       margin: 0 auto;
     }
 
-    .section h3 {
-      font-size: 1.8em;
-      margin-bottom: 20px;
+    /* Titres en bulles */
+    .bubble-title {
       display: inline-block;
-      background-color: var(--jaune);
-      color: var(--gris);
-      padding: 10px 20px;
-      border-radius: 30px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      animation: pop 0.8s ease;
-    }
-
-    @keyframes pop {
-      from {
-        transform: scale(0.9);
-        opacity: 0.7;
-      }
-      to {
-        transform: scale(1);
-        opacity: 1;
-      }
-    }
-
-    .resources-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 25px;
-      margin-top: 30px;
-    }
-
-    .resource-card {
-      background-color: var(--blanc);
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      overflow: hidden;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .resource-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
-    }
-
-    .resource-card .card-content {
-      padding: 20px;
-    }
-
-    .resource-card .card-content a {
-      text-decoration: none;
-      color: var(--violet);
+      padding: 6px 16px;
+      border-radius: 25px;
       font-weight: 600;
+      font-size: 1.2em;
+      color: #fff;
+      margin: 30px 0 15px 0;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
 
-    .resource-card .card-content p {
-      margin-top: 10px;
-      font-size: 0.95em;
-      line-height: 1.5;
+    .bubble-jaune { background-color: #f4c542; color: #3a2c00; }
+    .bubble-violet { background-color: #7d3c98; }
+
+    /* Blocs simples */
+    .bloc-list {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      margin-bottom: 40px;
+    }
+
+    .bloc-item {
+      background-color: #fff;
+      border-left: 5px solid var(--violet);
+      padding: 10px 16px;
+      border-radius: 8px;
+      text-decoration: none;
+      color: var(--gris);
+      transition: all 0.25s ease;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    }
+
+    .bloc-item:hover {
+      transform: translateX(4px);
+      box-shadow: 0 4px 10px rgba(125,60,152,0.15);
+    }
+
+    .bloc-item h4 {
+      margin: 0;
+      font-size: 1.05em;
+      color: var(--violet);
+    }
+
+    .bloc-item p {
+      margin: 4px 0 0 0;
+      font-size: 0.9em;
+      line-height: 1.4;
     }
 
     /* Section vulgarisation */
-    .vulgarisation {
-      margin-top: 60px;
-    }
-
     .vulgarisation .item {
-      margin-bottom: 30px;
+      background-color: #fff;
+      border-left: 4px solid var(--violet);
+      border-radius: 8px;
+      padding: 10px 15px;
+      margin-bottom: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
     }
 
     .vulgarisation .item h4 {
       margin: 0;
-      font-size: 1.4em;
-      background-color: var(--violet);
-      color: var(--blanc);
-      padding: 8px 15px;
-      border-radius: 20px;
-      display: inline-block;
-      animation: pop 0.8s ease;
+      color: var(--violet);
+      font-size: 1em;
     }
 
     .vulgarisation .item p {
-      margin-top: 8px;
-      line-height: 1.6;
+      margin-top: 4px;
+      font-size: 0.9em;
     }
 
     footer {
       text-align: center;
-      padding: 25px 0;
+      padding: 20px 0;
       background-color: #f0f0f0;
       color: var(--gris);
-      margin-top: 60px;
+      margin-top: 50px;
+      font-size: 0.9em;
+    }
+
+    @media (max-width: 600px) {
+      .hero-text h2 { font-size: 1.6em; }
+      .bloc-item h4 { font-size: 1em; }
     }
   </style>
 </head>
@@ -181,7 +177,7 @@
           <li><a href="index.html#missions">Missions</a></li>
           <li><a href="activites.html">Activités</a></li>
           <li><a href="impact.html">Impact</a></li>
-           <li><a href="ressources.html" class="active">Ressources</a></li>
+          <li><a href="ressources.html" class="active">Ressources</a></li>
           <li><a href="index.html#contact">Contact</a></li>
         </ul>
       </nav>
@@ -191,94 +187,71 @@
   <section class="hero">
     <div class="hero-text">
       <h2>📚 Ressources & Vulgarisation</h2>
-      <p>Tous nos documents, supports et astuces pour partager les sciences autrement.</p>
+      <p>Supports et idées pour apprendre et partager les sciences autrement.</p>
+    </div>
+  </section>
+
+  <section class="section resources-page">
+
+    <!-- 🟡 Documents d’inspiration -->
+    <h3 class="bubble-title bubble-jaune">Documents d’inspiration</h3>
+    <div class="bloc-list">
+      <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_8eme.pdf" target="_blank" class="bloc-item">
+        <h4>📘 Inspiration 8ème</h4>
+        <p>Document d’inspiration pour le niveau 8ᵉ — PDF.</p>
+      </a>
+
+      <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_11eme.pdf" target="_blank" class="bloc-item">
+        <h4>📗 Inspiration 11ème</h4>
+        <p>Document d’inspiration pour le niveau 11ᵉ — PDF.</p>
+      </a>
+
+      <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_12eme.pdf" target="_blank" class="bloc-item">
+        <h4>📙 Inspiration 12ème</h4>
+        <p>Document d’inspiration pour le niveau 12ᵉ — PDF.</p>
+      </a>
+
+      <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_college_LouisRiel.pdf" target="_blank" class="bloc-item">
+        <h4>📕 Inspiration collège Louis-Riel (9–10)</h4>
+        <p>Projet collaboratif entre élèves et enseignants — PDF.</p>
+      </a>
     </div>
 
-    <section class="section resources-page">
-
-  <!-- 🔶 SECTION 1 : Documents d’inspiration -->
-  <h3 class="bubble-title bubble-jaune">Documents d’inspiration</h3>
-  <div class="resources-grid">
-    <div class="resource-card">
-      <div class="card-content">
-        <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_8eme.pdf" target="_blank">
-          Inspiration 8ème
-        </a>
-        <p>Document d’inspiration pour le niveau 8ᵉ — téléchargement en PDF.</p>
-      </div>
-    </div>
-    <div class="resource-card">
-      <div class="card-content">
-        <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_11eme.pdf" target="_blank">
-          Inspiration 11ème
-        </a>
-        <p>Document d’inspiration pour le niveau 11ᵉ — téléchargement en PDF.</p>
-      </div>
-    </div>
-    <div class="resource-card">
-      <div class="card-content">
-        <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_12eme.pdf" target="_blank">
-          Inspiration 12ème
-        </a>
-        <p>Document d’inspiration pour le niveau 12ᵉ — téléchargement en PDF.</p>
-      </div>
-    </div>
-    <div class="resource-card">
-      <div class="card-content">
-        <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_college_LouisRiel.pdf" target="_blank">
-          Inspiration collège Louis-Riel (9–10)
-        </a>
-        <p>Projet collaboratif entre élèves et enseignants — version 2025.</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- 🔮 SECTION 2 : Livres & Publications -->
-  <h3 class="bubble-title bubble-violet">Livres & Publications</h3>
-  <div class="resources-grid">
-    <div class="resource-card">
-      <div class="card-content">
-        <a href="https://cdjuikem.github.io/pdfs/outreach/Livres_100_Applications.pdf" target="_blank">
-          100 applications concrètes des mathématiques
-        </a>
+    <!-- 🟣 Livres & Publications -->
+    <h3 class="bubble-title bubble-violet">Livres & Publications</h3>
+    <div class="bloc-list">
+      <a href="https://cdjuikem.github.io/pdfs/outreach/Livres_100_Applications.pdf" target="_blank" class="bloc-item">
+        <h4>📘 100 applications concrètes des mathématiques</h4>
         <p>La base des IA — Avril 2025.</p>
-      </div>
-    </div>
-    <div class="resource-card">
-      <div class="card-content">
-        <a href="https://cdjuikem.github.io/pdfs/outreach/Livres_25_Applications.pdf" target="_blank">
-          Les maths autrement — 25 applications fascinantes
-        </a>
+      </a>
+
+      <a href="https://cdjuikem.github.io/pdfs/outreach/Livres_25_Applications.pdf" target="_blank" class="bloc-item">
+        <h4>📗 Les maths autrement — 25 applications fascinantes</h4>
         <p>Exploration créative — Février 2024.</p>
+      </a>
+    </div>
+
+    <!-- 💡 Vulgarisation -->
+    <div class="vulgarisation">
+      <div class="item">
+        <h4>1. Connaître son public</h4>
+        <p>Adapter le vocabulaire et le ton selon l’âge et l’expérience du public.</p>
+      </div>
+      <div class="item">
+        <h4>2. Utiliser des analogies</h4>
+        <p>Relier les concepts à la vie quotidienne pour les rendre concrets.</p>
+      </div>
+      <div class="item">
+        <h4>3. Illustrer avec des images simples</h4>
+        <p>Les visuels renforcent la compréhension ; garde la clarté avant tout.</p>
+      </div>
+      <div class="item">
+        <h4>4. Raconter une histoire</h4>
+        <p>Chaque concept devient vivant à travers une anecdote captivante.</p>
       </div>
     </div>
-  </div>
 
-  <!-- 💡 SECTION 3 : Comment vulgariser ? -->
-  <h3 class="bubble-title bubble-lavande">Comment vulgariser ?</h3>
-  <div class="vulgarisation">
-    <div class="item">
-      <h4>1. Connaître son public</h4>
-      <p>Adapter le vocabulaire et le ton selon l’âge et l’expérience du public pour créer une vraie connexion.</p>
-    </div>
-    <div class="item">
-      <h4>2. Utiliser des analogies parlantes</h4>
-      <p>Relier les concepts à la vie quotidienne : un ballon pour l’atmosphère, une recette pour un modèle mathématique.</p>
-    </div>
-    <div class="item">
-      <h4>3. Illustrer avec des images simples</h4>
-      <p>Les visuels renforcent la compréhension ; mieux vaut un schéma clair qu’un long paragraphe technique.</p>
-    </div>
-    <div class="item">
-      <h4>4. Raconter une histoire</h4>
-      <p>Chaque découverte a une part d’humanité ; introduis les notions avec une anecdote captivante.</p>
-    </div>
-  </div>
-
-</section>
-
-
-  
+  </section>
 
   <footer>
     <p>© 2025 Djuikem Academy — Inspirer • Innover • Orienter</p>
@@ -286,3 +259,4 @@
 
 </body>
 </html>
+
