--- a/ressources.html
+++ b/ressources.html
@@ -197,7 +197,7 @@
     <h3 class="bubble-title bubble-jaune">Documents d’inspiration</h3>
     <div class="bloc-list">
       <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_8eme.pdf" target="_blank" class="bloc-item">
-        <h4>📘 Inspiration 8ème</h4>
+        <h4> Inspiration 8ème</h4>
         <p>Document d’inspiration pour le niveau 8ᵉ — PDF.</p>
       </a>
 
@@ -207,12 +207,12 @@
       </a>
 
       <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_12eme.pdf" target="_blank" class="bloc-item">
-        <h4>📙 Inspiration 12ème</h4>
+        <h4> Inspiration 12ème</h4>
         <p>Document d’inspiration pour le niveau 12ᵉ — PDF.</p>
       </a>
 
       <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_college_LouisRiel.pdf" target="_blank" class="bloc-item">
-        <h4>📕 Inspiration collège Louis-Riel (9–10)</h4>
+        <h4> Inspiration collège Louis-Riel (9–10)</h4>
         <p>Projet collaboratif entre élèves et enseignants — PDF.</p>
       </a>
     </div>
@@ -221,17 +221,18 @@
     <h3 class="bubble-title bubble-violet">Livres & Publications</h3>
     <div class="bloc-list">
       <a href="https://cdjuikem.github.io/pdfs/outreach/Livres_100_Applications.pdf" target="_blank" class="bloc-item">
-        <h4>📘 100 applications concrètes des mathématiques</h4>
+        <h4> 100 applications concrètes des mathématiques</h4>
         <p>La base des IA — Avril 2025.</p>
       </a>
 
       <a href="https://cdjuikem.github.io/pdfs/outreach/Livres_25_Applications.pdf" target="_blank" class="bloc-item">
-        <h4>📗 Les maths autrement — 25 applications fascinantes</h4>
+        <h4> Les maths autrement — 25 applications fascinantes</h4>
         <p>Exploration créative — Février 2024.</p>
       </a>
     </div>
 
     <!-- 💡 Vulgarisation -->
+     <h3 class="bubble-title bubble-jaune">Vulgarisation</h3>
     <div class="vulgarisation">
       <div class="item">
         <h4>1. Connaître son public</h4>
