--- a/ressources.html
+++ b/ressources.html
@@ -220,14 +220,19 @@
     <!-- 🟣 Livres & Publications -->
     <h3 class="bubble-title bubble-violet">Livres & Publications</h3>
     <div class="bloc-list">
-      <a href="https://cdjuikem.github.io/pdfs/outreach/Livres_100_Applications.pdf" target="_blank" class="bloc-item">
+      <a href="https://cdjuikem.github.io/pdfs/100_Applications_Concr%C3%A8tes.pdf" target="_blank" class="bloc-item">
         <h4> 100 applications concrètes des mathématiques</h4>
         <p>La base des IA — Avril 2025.</p>
       </a>
 
-      <a href="https://cdjuikem.github.io/pdfs/outreach/Livres_25_Applications.pdf" target="_blank" class="bloc-item">
+      <a href="https://www.amazon.ca/-/fr/25-applications-fascinantes-math%C3%A9matiques/dp/B0CWDWMH2N" target="_blank" class="bloc-item">
         <h4> Les maths autrement — 25 applications fascinantes</h4>
         <p>Exploration créative — Février 2024.</p>
+      </a>
+
+      <a href="https://cdjuikem.github.io/pdfs/100_Applications_Concr%C3%A8tes.pdf" target="_blank" class="bloc-item">
+        <h4> 33 équations de vie à 33 ans</h4>
+        <p>Anniversaire Clotilde Djuikem — Octobre 2025.</p>
       </a>
     </div>
 
