--- a/ressources.html
+++ b/ressources.html
@@ -230,10 +230,11 @@
         <p>Exploration créative — Février 2024.</p>
       </a>
 
-      <a href="https://cdjuikem.github.io/pdfs/100_Applications_Concr%C3%A8tes.pdf" target="_blank" class="bloc-item">
-        <h4> 33 équations de vie à 33 ans</h4>
-        <p>Anniversaire Clotilde Djuikem — Octobre 2025.</p>
+    <a href="pdfs/33anniversaire.pdf" target="_blank" class="bloc-item">
+  <h4>🎂 33 équations de vie à 33 ans</h4>
+  <p>Anniversaire de Clotilde Djuikem — Octobre 2025.</p>
       </a>
+
     </div>
 
     <!-- 💡 Vulgarisation -->
