--- a/ressources.html
+++ b/ressources.html
@@ -202,7 +202,7 @@
       </a>
 
       <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_11eme.pdf" target="_blank" class="bloc-item">
-        <h4>📗 Inspiration 11ème</h4>
+        <h4> Inspiration 11ème</h4>
         <p>Document d’inspiration pour le niveau 11ᵉ — PDF.</p>
       </a>
 
