--- a/impact.html
+++ b/impact.html
@@ -228,11 +228,11 @@
   <!-- Bulles principales -->
   <section class="impact-section">
     <div class="impact-bubbles">
-      <div class="bubble">💜 500+ élèves inspirés</div>
-      <div class="bubble">🌍 Cameroun • France • Canada</div>
-      <div class="bubble">💛 120 000+ abonnés en ligne</div>
-      <div class="bubble">📘 30+ ateliers et webinaires éducatifs</div>
-      <div class="bubble">✨ 3 langues d’enseignement</div>
+      <div class="bubble"> 500+ élèves inspirés</div>
+      <div class="bubble"> Cameroun • France • Canada</div>
+      <div class="bubble"> 120 000+ abonnés en ligne</div>
+      <div class="bubble"> 30+ ateliers et webinaires éducatifs</div>
+      <!--<div class="bubble">✨ 3 langues d’enseignement</div> -->
     </div>
   </section>
 
