--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <!-- Section Contact -->
   <section id="contact" class="section">
     <h2>Contact</h2>
-    <p>📧 <a href="tiohacademy@gmail.com">tiohacademy@gmail.com</a></p>
+    <p>📧 <a href="tiohacademy@gmail.com">Écrire un message</a></p>
     <p>Retrouvez-nous sur :</p>
     <div class="socials">
    <a href="https://www.youtube.com/@tiohacademy" target="_blank" rel="noopener noreferrer">YouTube</a> |
