--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ document.addEventListener("DOMContentLoaded", () => {
         Découvrez l’histoire de <strong>Valentina Terechkova</strong>, <strong>Katherine Johnson</strong> et d’autres figures inspirantes.
         Ce webinaire interactif montre que la passion pour les mathématiques peut transformer des vies — et même mener dans l’espace.
       </p>
-      <a href="#" class="btn">S’inscrire bientôt</a>
+      <a href="activites.html" class="btn">S’inscrire bientôt</a>
     </div>
   </section>
 
