--- a/activites.html
+++ b/activites.html
@@ -144,9 +144,9 @@
     </p>
 
     <ul style="line-height:1.8;">
-      <li>🧠 Pour les enfants : ateliers inspirants, interactifs et quiz ludiques</li>
-      <li>👨‍👩‍👧 Pour les parents : conseils pour nourrir la curiosité scientifique</li>
-      <li>🌍 En ligne, gratuit sur inscription</li>
+      <li> Pour les enfants : ateliers inspirants, interactifs et quiz ludiques</li>
+      <li> Pour les parents : conseils pour nourrir la curiosité scientifique</li>
+      <li> En ligne, gratuit sur inscription</li>
     </ul>
 
  
