--- a/activites.html
+++ b/activites.html
@@ -128,7 +128,9 @@
   <!-- Bulle de date -->
 <div class="date-bulle">
   📅 <strong>31 octobre 2025 — 16h GMT</strong>
+  <span class="badge-gratuit">Gratuit</span>
 </div>
+
   <p>
     Ce webinaire est conçu pour les enfants, mais aussi pour leurs parents curieux.  
     Ensemble, ils découvrent comment des femmes extraordinaires ont marqué l’histoire de la science
