--- a/activites.html
+++ b/activites.html
@@ -127,8 +127,7 @@
   <h2>Djuikem Academy Webinaire : Les pionnières des sciences</h2>
   <!-- Bulle de date -->
 <div class="date-bulle">
-  📅 <strong>31 octobre 2025 — 16h GMT</strong>
-  <span class="badge-gratuit">Gratuit</span>
+  📅 <strong>31 octobre 2025 — 16h GMT — Gratuit </strong>
 </div>
 
   <p>
