--- a/index.html
+++ b/index.html
@@ -79,15 +79,27 @@ document.addEventListener("DOMContentLoaded", () => {
       Nous proposons des webinaires, ateliers et conférences pour apprendre les mathématiques autrement.
       Notre première activité phare : un <strong>webinaire pour enfants</strong> sur les pionnières des sciences.
     </p>
+<div class="webinaire">
+  <h3>🎥 Les pionnières des sciences : quand la curiosité mène jusqu’aux étoiles</h3>
+  <p>
+    Découvrez l’histoire de <strong>Valentina Terechkova</strong>, <strong>Katherine Johnson</strong> et d’autres figures inspirantes.
+    Ce webinaire interactif montre que la passion pour les mathématiques peut transformer des vies — et même mener dans l’espace.
+  </p>
 
-    <div class="webinaire">
-      <h3>🎥 Les pionnières des sciences : quand la curiosité mène jusqu’aux étoiles</h3>
-      <p>
-        Découvrez l’histoire de <strong>Valentina Terechkova</strong>, <strong>Katherine Johnson</strong> et d’autres figures inspirantes.
-        Ce webinaire interactif montre que la passion pour les mathématiques peut transformer des vies — et même mener dans l’espace.
-      </p>
-      <a href="activites.html" class="btn">S’inscrire bientôt</a>
-    </div>
+  <!-- 🎬 Ajout de la vidéo YouTube -->
+  <div class="video-container" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; margin: 20px 0;">
+    <iframe
+      src="https://www.youtube.com/embed/Lh9OaJ2valM"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+      style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 10px;"
+    ></iframe>
+  </div>
+
+  <a href="activites.html" class="btn">S’inscrire bientôt</a>
+</div>
+
   </section>
 
 <!-- Section Impact -->
