--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ document.addEventListener("DOMContentLoaded", () => {
       Notre première activité phare : un <strong>webinaire pour enfants</strong> sur les pionnières des sciences.
     </p>
 <div class="webinaire">
-  <h3> Les pionnières des sciences : quand la curiosité mène jusqu’aux étoiles</h3>
+ <!-- <h3> Les pionnières des sciences : quand la curiosité mène jusqu’aux étoiles</h3>
   <p>
     Découvrez l’histoire de <strong>Valentina Terechkova</strong>, <strong>Katherine Johnson</strong> et d’autres figures inspirantes.
     Ce webinaire interactif montre que la passion pour les mathématiques peut transformer des vies — et même mener dans l’espace.
