--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
   <!-- Pied de page -->
   <footer>
-    <p>© 2025 Djuikem Academy — Inspirer • Innover • Orienter</p>
+    <p>© 2025 Tioh Academy — Inspirer • Innover • Orienter</p>
   </footer>
 
 
