--- a/ressources.html
+++ b/ressources.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ressources & Vulgarisation — Djuikem Academy</title>
+  <title>Ressources & Vulgarisation — Tioh Academy</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     :root {
@@ -170,7 +170,7 @@
 
   <header>
     <div class="container">
-      <h1 class="logo">Djuikem Academy</h1>
+      <h1 class="logo">Tioh Academy</h1>
       <nav>
         <ul>
           <li><a href="index.html#accueil">Accueil</a></li>
@@ -196,22 +196,22 @@
     <!-- 🟡 Documents d’inspiration -->
     <h3 class="bubble-title bubble-jaune">Documents d’inspiration</h3>
     <div class="bloc-list">
-      <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_8eme.pdf" target="_blank" class="bloc-item">
+      <a href="https://cTioh.github.io/pdfs/outreach/Inspiration_8eme.pdf" target="_blank" class="bloc-item">
         <h4> Inspiration 8ème</h4>
         <p>Document d’inspiration pour le niveau 8ᵉ — PDF.</p>
       </a>
 
-      <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_11eme.pdf" target="_blank" class="bloc-item">
+      <a href="https://cTioh.github.io/pdfs/outreach/Inspiration_11eme.pdf" target="_blank" class="bloc-item">
         <h4> Inspiration 11ème</h4>
         <p>Document d’inspiration pour le niveau 11ᵉ — PDF.</p>
       </a>
 
-      <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_12eme.pdf" target="_blank" class="bloc-item">
+      <a href="https://cTioh.github.io/pdfs/outreach/Inspiration_12eme.pdf" target="_blank" class="bloc-item">
         <h4> Inspiration 12ème</h4>
         <p>Document d’inspiration pour le niveau 12ᵉ — PDF.</p>
       </a>
 
-      <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_college_LouisRiel.pdf" target="_blank" class="bloc-item">
+      <a href="https://cTioh.github.io/pdfs/outreach/Inspiration_college_LouisRiel.pdf" target="_blank" class="bloc-item">
         <h4> Inspiration collège Louis-Riel (9–10)</h4>
         <p>Projet collaboratif entre élèves et enseignants — PDF.</p>
       </a>
@@ -220,7 +220,7 @@
     <!-- 🟣 Livres & Publications -->
     <h3 class="bubble-title bubble-violet">Livres & Publications</h3>
     <div class="bloc-list">
-      <a href="https://cdjuikem.github.io/pdfs/100_Applications_Concr%C3%A8tes.pdf" target="_blank" class="bloc-item">
+      <a href="https://cTioh.github.io/pdfs/100_Applications_Concr%C3%A8tes.pdf" target="_blank" class="bloc-item">
         <h4> 100 applications concrètes des mathématiques</h4>
         <p>La base des IA — Avril 2025.</p>
       </a>
@@ -232,7 +232,7 @@
 
     <a href="pdfs/33anniversaire.pdf" target="_blank" class="bloc-item">
   <h4>🎂 33 équations de vie à 33 ans</h4>
-  <p>Anniversaire de Clotilde Djuikem — Octobre 2025.</p>
+  <p>Anniversaire de Clotilde Tioh — Octobre 2025.</p>
       </a>
 
     </div>
@@ -261,7 +261,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Djuikem Academy — Inspirer • Innover • Orienter</p>
+    <p>© 2025 Tioh Academy — Inspirer • Innover • Orienter</p>
   </footer>
 
 </body>
